samples/_failures_safe/1761316625_0f329e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee217bec.c: In function ‘main’:
./samples/SAFE/__tmp_ee217bec.c:175:5: error: expected declaration or statement at end of input
  175 |     if (!tokens) {
      |     ^~
./samples/SAFE/__tmp_ee217bec.c:175:5: error: expected declaration or statement at end of input
